# lvgl-test

./: CMakeLists.txt  lv_conf.h
src/: main.c
src/fonts/: Roboto.c
src/panels/: rpms.c  rpms.h
src/widget/: rpm.c  rpm.h
src/widgets/: rpm.c  rpm.h
